# substrait-packaging

./: README.md  pixi.toml  testprotos.proto
.github/workflows/: publish_artifacts.yml  python_antlr.yml  python_extensions.yml  python_protobuf.yml  python_publish.yml  spec_released.yml
antlr/: antlr.sh
antlr/tests/: test_aggregate_test.yaml  test_scalar_test.yaml
python/: .gitignore  README.md
python/substrait-antlr/: README.md  generate_antlr.sh  pyproject.toml
python/substrait-antlr/src/substrait_antlr/func_test_case/: FuncTestCaseLexer.py  FuncTestCaseParser.py  FuncTestCaseParserListener.py  FuncTestCaseParserVisitor.py
python/substrait-antlr/src/substrait_antlr/substrait_type/: SubstraitLexer.py  SubstraitTypeLexer.py  SubstraitTypeListener.py  SubstraitTypeParser.py  SubstraitTypeVisitor.py
python/substrait-antlr/tests/: test_antlr.py
python/substrait-extensions/: README.md  generate_extensions.sh  pyproject.toml
python/substrait-extensions/tests/: test_extensions.py
python/substrait-protobuf/: README.md  buf.gen.yaml  buf.yaml  generate_protobuf.sh  pyproject.toml
python/substrait-protobuf/src/substrait/: algebra_pb2.py  algebra_pb2.pyi  capabilities_pb2.py  extended_expression_pb2.py  extended_expression_pb2.pyi  function_pb2.py  function_pb2.pyi  parameterized_types_pb2.py  parameterized_types_pb2.pyi  plan_pb2.py  plan_pb2.pyi  type_expressions_pb2.py  type_expressions_pb2.pyi  type_pb2.py  type_pb2.pyi
python/substrait-protobuf/src/substrait/extensions/: extensions_pb2.py  extensions_pb2.pyi
python/substrait-protobuf/tests/: test_proto.py
python/substrait-protobuf/tests/testprotos/: testprotos_pb2.py  testprotos_pb2.pyi
scripts/: attach_subtree.sh  branch_exists.sh  tag_exists.sh
scripts/python/: pypi_package_exists.sh
