[project]
name = "substrait-extensions"
version = "0.0.0"
description = "Packaged Substrait Extension Files"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Substrait Contributors", email = "substrait@googlegroups.com"}
]

dependencies = []

[project.urls]
Homepage = "https://substrait.io"
Repository = "https://github.com/substrait-io/substrait-packaging"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"substrait_extensions.dialects" = ["*.yaml"]
"substrait_extensions.extensions" = ["*.yaml"]
"substrait_extensions.testcases" = ["*/*.test"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
