[project]
name = "substrait-protobuf"
version = "0.0.0"
description = "Generated Substrait Protocol Buffer Code"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Substrait Contributors", email = "substrait@googlegroups.com"}
]

dependencies = [
    "protobuf >=5,<7",
]

[project.urls]
Homepage = "https://substrait.io"
Repository = "https://github.com/substrait-io/substrait-packaging"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
